--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "deploy": "git subtree push --prefix dist/ origin gh-pages"
+    "deploy": "npx gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
